# sqnc

./: .claudecontext  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/audio/: mod.rs
src/midi/: mod.rs
src/sequencer/: mod.rs  playback.rs
